// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component applestore renders correctly 1`] = `
<a
  class="sc-htpNat iPnMvj"
  color="blue600"
  href="https://itunes.apple.com/us/app/blockchain-bitcoin-wallet/id493253309"
  target="_blank"
>
  <img
    class="sc-bwzfXH crzioW"
    color="auto"
    height="48px"
    src="[object Object]"
    srcset=""
    width="auto"
  />
</a>
`;

exports[`Badge component googleplay renders correctly 1`] = `
<a
  class="sc-htpNat iPnMvj"
  color="blue600"
  href="https://play.google.com/store/apps/details?id=piuk.blockchain.android"
  target="_blank"
>
  <img
    class="sc-bwzfXH crzioW"
    color="auto"
    height="48px"
    src="[object Object]"
    srcset=""
    width="auto"
  />
</a>
`;
